# api_news

./: pyproject.toml  run.py
app/: __init__.py
app/controllers/: category_controller.py  comment_controller.py  news_controller.py  user_controller.py
app/errors/: handle_errors.py
app/models/: category.py  comment.py  news.py  user.py
app/routes/: __init__.py
app/services/: category_service.py  comment_service.py  news_service.py  user_service.py
app/validators/: category_validator.py  comment_validator.py  news_validator.py  user_validator.py  validator_handler.py
src/cache/: news_cache.py
src/controllers/: category_controller.py  comment_controller.py  news_controller.py  user_controller.py
src/database/: config.py  create_tables.py
src/database/models/: __init__.py  category_orm.py  comment_orm.py  like_orm.py  news_orm.py  user_orm.py
src/errors/: handle_errors.py
src/filters/: author_filter.py  base_strategy.py  category_filter.py  min_likes_filter.py  order_manager.py  strategy_manager.py
src/main/routes/: category_routes.py  comment_routes.py  news_routes.py  user_routes.py
src/main/server/: server.py
src/models/: comment.py  news.py  user.py
src/repositories/: base_repository.py
src/repositories/base/: category_repository.py  comment_repository.py  news_repository.py  user_repository.py
src/services/: category_service.py  comment_service.py  news_service.py  user_service.py
src/utils/: paginator.py
src/validators/: category_validator.py  comment_validator.py  news_validator.py  user_validator.py  validator_handler.py
(+8 files in other folders)
