[project]
name = "api-news"
version = "0.1.0"
description = ""
authors = [
    {name = "luc4sgr",email = "23.lucasdoliveira@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "cerberus (>=1.3.7,<2.0.0)",
    "cachetools (>=5.5.2,<6.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
